--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "start:prod": "cross-env NODE_ENV=production node server/server"
   },
   "dependencies": {
+    "babel-polyfill": "^6.22.0",
+    "classnames": "^2.2.5",
     "express": "^4.14.1",
+    "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "redux": "^3.6.0"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.22.0",
     "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-standard": "^5.3.1",
@@ -34,7 +39,17 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
+    "file-loader": "^0.10.0",
     "minimist": "^1.2.0",
+    "postcss": "^5.2.12",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-focus": "^1.0.0",
+    "postcss-import": "^9.1.0",
+    "postcss-reporter": "^3.0.0",
+    "postcss-url": "^5.1.2",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^1.16.3",
     "webpack-hot-middleware": "^2.16.1"
