--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "start:prod": "cross-env NODE_ENV=production node server/server"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-polyfill": "^6.22.0",
+    "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
-    "redux": "^3.6.0"
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^2.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -46,6 +52,7 @@
     "postcss-cssnext": "^2.9.0",
     "postcss-focus": "^1.0.0",
     "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.2",
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
