--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "cross-env NODE_ENV=development webpack --color --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --color --progress",
     "start": "cross-env NODE_ENV=development node server/server",
-    "start:prod": "cross-env NODE_ENV=production node server/server"
+    "start:prod": "cross-env NODE_ENV=production node server/server",
+    "fake-teamcity": "json-server --routes fakeTeamcity/routes.json --watch fakeTeamcity/teamcity.json --port 3001"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
     "file-loader": "^0.10.0",
+    "json-server": "^0.9.5",
     "minimist": "^1.2.0",
     "postcss": "^5.2.12",
     "postcss-browser-reporter": "^0.5.0",
@@ -83,6 +85,10 @@
       "jest": true
     },
     "rules": {
+      "comma-dangle": [
+        "error",
+        "only-multiline"
+      ],
       "semi": [
         2,
         "never"
