--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
+    "font-awesome": "^4.7.0",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
