--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "webpack": "2.2.1",
     "webpack-dev-server": "^1.16.3",
     "webpack-hot-middleware": "^2.16.1"
   },
