--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.2.5",
     "express": "^4.14.1",
     "font-awesome": "^4.7.0",
+    "lame": "^1.2.4",
     "player": "^0.6.1",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
@@ -27,7 +28,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
-    "reselect": "^2.5.4"
+    "reselect": "^2.5.4",
+    "speaker": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
