--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
-    "speaker": "^0.3.0"
+    "speaker": "^0.3.0",
+    "throttle": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
