--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
+    "serve-favicon": "^2.4.1",
     "speaker": "^0.3.0"
   },
   "devDependencies": {
