--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Teamcity builds status visualisator",
   "scripts": {
-    "lint": "eslint --ext .js --ext .jsx \"client/\" ",
+    "lint": "npm-run-all lint:js lint:css",
+    "lint:css": "stylelint \"client/**/*.css\"",
+    "lint:js": "eslint --ext .js --ext .jsx \"client/\" ",
     "build": "cross-env NODE_ENV=development webpack --color --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --color --progress",
     "start": "cross-env NODE_ENV=development node server/server",
@@ -56,6 +58,7 @@
     "file-loader": "^0.10.0",
     "json-server": "^0.9.5",
     "minimist": "^1.2.0",
+    "npm-run-all": "^4.0.2",
     "postcss": "^5.2.12",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.9.0",
@@ -65,6 +68,9 @@
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.10.1",
+    "stylelint-config-css-modules": "^0.1.0",
+    "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
     "webpack": "2.2.1",
     "webpack-dev-server": "^1.16.3",
@@ -113,6 +119,27 @@
       "react/jsx-boolean-value": [
         "error",
         "always"
+      ]
+    }
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard",
+      "stylelint-config-css-modules"
+    ],
+    "rules": {
+      "font-family-name-quotes": "always-where-recommended",
+      "declaration-empty-line-before": null,
+      "rule-empty-line-before": null,
+      "custom-property-empty-line-before": null,
+      "block-closing-brace-empty-line-before": null,
+      "declaration-block-no-duplicate-properties": [
+        true,
+        {
+          "ignoreProperties": [
+            "composes"
+          ]
+        }
       ]
     }
   }
