--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npm-run-all lint:js lint:css",
     "lint:css": "stylelint \"client/**/*.css\"",
-    "lint:js": "eslint --ext .js --ext .jsx \"client/\" ",
+    "lint:js": "eslint --ext .js --ext .jsx \"+(server|client)/**/*+(.js|.jsx)\" ",
     "build": "cross-env NODE_ENV=development webpack --color --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --color --progress",
     "start": "cross-env NODE_ENV=development node server/server",
