Add method override for express. Start using audio api. add saving sound

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.1",
     "font-awesome": "^4.7.0",
     "lame": "^1.2.4",
+    "method-override": "^2.3.8",
     "mongoose": "^4.9.9",
     "node-mpg123-util": "0.0.3",
     "ramda": "^0.23.0",
