--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "babel-polyfill": "^6.22.0",
-    "body-parser": "^1.16.0",
+    "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
     "font-awesome": "^4.7.0",
@@ -29,6 +29,7 @@
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.13.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
@@ -37,7 +38,8 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
     "serve-favicon": "^2.4.1",
-    "speaker": "^0.3.0"
+    "speaker": "^0.3.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
