--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
+    "express-fileupload": "^0.1.3",
     "font-awesome": "^4.7.0",
     "lame": "^1.2.4",
     "method-override": "^2.3.8",
