--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lame": "^1.2.4",
     "method-override": "^2.3.8",
     "mongoose": "^4.9.9",
-    "node-mpg123-util": "0.0.3",
+    "pcm-volume": "^1.0.0",
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
