--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-scrollbar": "^0.5.1",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
