--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "babel-polyfill": "^6.22.0",
+    "bindings": "^1.2.1",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
