--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-polyfill": "^6.22.0",
+    "babel-polyfill": "6.22.0",
     "bindings": "^1.2.1",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
+    "deep-diff": "^0.3.8",
     "express": "^4.14.1",
     "express-fileupload": "^0.1.3",
     "font-awesome": "^4.7.0",
@@ -30,33 +31,37 @@
     "nanotimer": "^0.3.14",
     "pcm-volume": "^1.0.0",
     "ramda": "^0.23.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-dropzone": "^3.13.2",
-    "react-hot-loader": "^1.3.1",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "react-scrollbar": "^0.5.1",
-    "react-toolbox": "^2.0.0-beta.12",
+    "react": "15.5.0",
+    "react-css-themr": "^2.1.2",
+    "react-dom": "15.5.0",
+    "react-dropzone": "3.13.2",
+    "react-hot-loader": "1.3.1",
+    "react-redux": "5.0.2",
+    "react-router": "3.0.2",
+    "react-scrollbar": "0.5.1",
+    "react-style-proptype": "^3.2.0",
+    "react-toolbox": "2.0.0-beta.12",
+    "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
     "serve-favicon": "^2.4.1",
     "speaker": "^0.3.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "symbol-observable": "^1.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
+    "babel-core": "6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-runtime": "^6.22.0",
+    "babel-runtime": "6.22.0",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "css-loader": "0.26.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-standard": "^5.3.1",
@@ -71,23 +76,24 @@
     "minimist": "^1.2.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
-    "postcss": "^5.2.12",
+    "postcss": "5.2.12",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^2.9.0",
+    "postcss-cssnext": "2.9.0",
     "postcss-focus": "^1.0.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-import": "9.1.0",
+    "postcss-loader": "1.2.2",
     "postcss-reporter": "^3.0.0",
-    "postcss-url": "^5.1.2",
+    "postcss-url": "5.1.2",
     "prop-types": "^15.5.10",
-    "style-loader": "^0.13.1",
+    "style-loader": "0.13.1",
     "stylelint": "^7.10.1",
     "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "0.5.7",
     "webpack": "2.2.1",
+    "webpack-dev-middleware": "^2.0.0",
     "webpack-dev-server": "^1.16.3",
-    "webpack-hot-middleware": "^2.16.1"
+    "webpack-hot-middleware": "2.16.1"
   },
   "babel": {
     "presets": [
